hphp/test/zend/good/ext/posix/tests/posix_getpwuid_variation.php.expectf
*** Testing posix_getpwuid() : usage variations ***

Notice: Undefined variable: undefined_var in %s/posix_getpwuid_variation.php on line 52

Notice: Undefined variable: unset_var in %s/posix_getpwuid_variation.php on line 55

Arg value 10.5

Warning: posix_getpwuid() expects parameter 1 to be integer, double given in %s/zend/good/ext/posix/tests/posix_getpwuid_variation.php on line 74

Arg value -10.5

Warning: posix_getpwuid() expects parameter 1 to be integer, double given in %s/zend/good/ext/posix/tests/posix_getpwuid_variation.php on line 74

Arg value 101234567000

Warning: posix_getpwuid() expects parameter 1 to be integer, double given in %s/zend/good/ext/posix/tests/posix_getpwuid_variation.php on line 74

Arg value 1.07654321E-9

Warning: posix_getpwuid() expects parameter 1 to be integer, double given in %s/zend/good/ext/posix/tests/posix_getpwuid_variation.php on line 74

Arg value 0.5

Warning: posix_getpwuid() expects parameter 1 to be integer, double given in %s/zend/good/ext/posix/tests/posix_getpwuid_variation.php on line 74

Notice: Array to string conversion in %s/posix_getpwuid_variation.php on line 64

Arg value Array

Warning: posix_getpwuid() expects parameter 1 to be integer, array given in %s/posix_getpwuid_variation.php on line 74

Notice: Array to string conversion in %s/posix_getpwuid_variation.php on line 64

Arg value Array

Warning: posix_getpwuid() expects parameter 1 to be integer, array given in %s/posix_getpwuid_variation.php on line 74

Notice: Array to string conversion in %s/posix_getpwuid_variation.php on line 64

Arg value Array

Warning: posix_getpwuid() expects parameter 1 to be integer, array given in %s/posix_getpwuid_variation.php on line 74

Notice: Array to string conversion in %s/posix_getpwuid_variation.php on line 64

Arg value Array

Warning: posix_getpwuid() expects parameter 1 to be integer, array given in %s/posix_getpwuid_variation.php on line 74

Notice: Array to string conversion in %s/posix_getpwuid_variation.php on line 64

Arg value Array

Warning: posix_getpwuid() expects parameter 1 to be integer, array given in %s/posix_getpwuid_variation.php on line 74

Arg value 

Warning: posix_getpwuid() expects parameter 1 to be integer, null given in %s/zend/good/ext/posix/tests/posix_getpwuid_variation.php on line 74

Arg value 

Warning: posix_getpwuid() expects parameter 1 to be integer, null given in %s/zend/good/ext/posix/tests/posix_getpwuid_variation.php on line 74

Arg value 1

Warning: posix_getpwuid() expects parameter 1 to be integer, boolean given in %s/zend/good/ext/posix/tests/posix_getpwuid_variation.php on line 74

Arg value 

Warning: posix_getpwuid() expects parameter 1 to be integer, boolean given in %s/zend/good/ext/posix/tests/posix_getpwuid_variation.php on line 74

Arg value 1

Warning: posix_getpwuid() expects parameter 1 to be integer, boolean given in %s/zend/good/ext/posix/tests/posix_getpwuid_variation.php on line 74

Arg value 

Warning: posix_getpwuid() expects parameter 1 to be integer, boolean given in %s/zend/good/ext/posix/tests/posix_getpwuid_variation.php on line 74

Arg value 

Warning: posix_getpwuid() expects parameter 1 to be integer, string given in %s/posix_getpwuid_variation.php on line 74

Arg value 

Warning: posix_getpwuid() expects parameter 1 to be integer, string given in %s/posix_getpwuid_variation.php on line 74

Arg value string

Warning: posix_getpwuid() expects parameter 1 to be integer, string given in %s/posix_getpwuid_variation.php on line 74

Arg value string

Warning: posix_getpwuid() expects parameter 1 to be integer, string given in %s/posix_getpwuid_variation.php on line 74

Arg value 

Warning: posix_getpwuid() expects parameter 1 to be integer, null given in %s/zend/good/ext/posix/tests/posix_getpwuid_variation.php on line 74

Arg value 

Warning: posix_getpwuid() expects parameter 1 to be integer, null given in %s/zend/good/ext/posix/tests/posix_getpwuid_variation.php on line 74

Catchable fatal error: Object of class stdClass could not be converted to string in %s/posix_getpwuid_variation.php on line 64
